fix for note-cards overflow on the home page (in case the user's browser has a minimum font size).
git-svn-id: http://svn.localprojects.net/gam2@1546 befef031-aaeb-48d0-b70f-681328309d3d

--- a/trunk/static/css/tc.gam.main.css
+++ b/trunk/static/css/tc.gam.main.css
@@ -1320,7 +1320,7 @@ div.invite-user .submit { margin:10px 0 0; }
 .continent.home div.project-cards div.box .bd { position: relative; }
 
 .continent.home div.project-cards .small-note { position: absolute; display: none; width: 45px; height: 45px; background: url(../images/smallnotes_sprite.png) 0px 0px no-repeat; font: 3px/3.5px "ff-meta-serif-web-pro-1","ff-meta-serif-web-pro-2", Georgia, Times, Times New Roman, serif; color: #3d3a36; }
-.continent.home div.project-cards .small-note div.wrap { display:block; width: 39px; height: 38px; margin: 2px 0 0 3px; padding-top: 1px; }
+.continent.home div.project-cards .small-note div.wrap { overflow:hidden; display:block; width: 39px; height: 38px; margin: 2px 0 0 3px; padding-top: 1px; }
 .continent.home div.project-cards .small-note:hover div.wrap { 
 	-webkit-box-shadow: 0px 0px 9px rgba(85,80,75,0.5); -moz-box-shadow: 0px 0px 9px rgba(85,80,75,0.5); box-shadow: 0px 0px 9px rgba(85,80,75,0.5); 
 	-webkit-transition: 150ms ease-in; -moz-transition: 150ms ease-in; -o-transition: 150ms ease-in; transition: 150ms ease-in; 
